--- a/Front/src/app/arena-entry/arena-entry.component.html
+++ b/Front/src/app/arena-entry/arena-entry.component.html
@@ -34,6 +34,7 @@
       <div style="width: 20%; background-color: #0f02; border-radius: 1rem; padding: 2rem">
         <h3 style="font-size: 2rem">Twoje punkty:</h3>
         <h2 style="font-size: 3.2rem; font-weight: 500; display: flex; flex-direction: row"> {{arenaData?.score}} </h2>
+        <h2 style="color: #fffa; font-size: 3.2rem; font-weight: 300; display: flex; flex-direction: row"> {{getMyScoreDiff()}} </h2>
       </div>
     </div>
 
